# src/server/schemas/req/create-server.schema.ts
@@ -2,9 +2,6 @@ import { number, object, string, TypeOf } from 'zod'
 
 export const CreateServerSchema = object({
   body: object({
-    processId: string({
-      required_error: 'Process id is required',
-    }),
     port: number({
       required_error: 'Port is required',
     }),
@@ -14,17 +11,8 @@ export const CreateServerSchema = object({
     gridName: string({
       required_error: 'Server name is required',
     }),
-    dataSource: string({
-      required_error: 'Data source is required',
-    }),
     dataBaseName: string({
       required_error: 'Database name is required',
-    }),
-    dataBaseUser: string({
-      required_error: 'Database user is required',
-    }),
-    dataBasePassword: string({
-      required_error: 'Database password is required',
     }),
   }),
 })
